--- a/recipes/go-github-release/metadata.yml
+++ b/recipes/go-github-release/metadata.yml
@@ -2,20 +2,27 @@ name: go-github-release
 description: "Dunner recipe for GitHub release of Go Projects"
 version: "0.1.0"
 
-preInstallCmd: "curl -O https://raw.githubusercontent.com/leopardlabs/dunner-cookbook/master/recipes/go-github-release/.goreleaser.yml"
+preInstallCmd: ""
 
 postInstallMessage: |
-    This recipe creates a dunner task file `.dunner.yaml` and also `.goreleaser.yml` which contains Github Release information. Edit it accordingly.
+    This recipe creates a dunner task file `.dunner.yml` which contains task to trigger release. 
     
-    To set the version of your project add git tag and push it to master branch remote. 
+    * Run below task to create goreleaser configuration file and edit it accordingly.
     
+    ```  
+    $ dunner do init-release
     ```
-    $ git tag -a <version> -m "Release version <version>"
-    $ git push origin <version>
+    
+    To set the version of your project add git tag or pass `--snapshot` flag to goreleaser to use commit sha.
+    
+    * To generate artifacts and not publish it to Github, run below task:
+
     ```
-    
-    Run below command from project root directory to make the Github release with all binaries of your project along with generated Changelog and source code.
-    
+    $ dunner do generate-artifacts
+    ```
+
+    * Run below command to make the Github release with all binaries of your project along with generated Changelog. Make sure to set the GITHUB_TOKEN in environment.
+
     ```
     $ dunner do go-github-release
     ```
