--- a/recipes/golang/.dunner.yaml
+++ b/recipes/golang/.dunner.yaml
@@ -49,6 +49,26 @@ test:
     commands:
     - ["go", "test", "./..."]
 
+init-release:
+  - image: golang
+    commands:
+    - ["apt-get", "update"]
+    - ["apt-get", "install", "-y", "curl", "git", "rpm"]
+    - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
+    - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
+    - ["rm", "-f", "goreleaser.tgz"]
+    - ["goreleaser", "init"]
+
+generate-artifacts:
+  - image: golang
+    commands:
+    - ["apt-get", "update"]
+    - ["apt-get", "install", "-y", "curl", "git", "rpm"]
+    - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
+    - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
+    - ["rm", "-f", "goreleaser.tgz"]
+    - ["goreleaser", "release", "--snapshot", "--skip-publish", "--rm-dist"]
+
 github_release:
   - image: golang
     commands:
@@ -57,7 +77,7 @@ github_release:
     - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
     - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
     - ["rm", "-f", "goreleaser.tgz"]
-    - ["goreleaser", "release", "--rm-dist"]
+    - ["goreleaser", "release", "--rm-dist", , "--snapshot"]
     mounts:
     - ".:/app"
     envs:
