--- a/recipes/golang/.dunner.yaml
+++ b/recipes/golang/.dunner.yaml
@@ -77,7 +77,7 @@ github_release:
     - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
     - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
     - ["rm", "-f", "goreleaser.tgz"]
-    - ["goreleaser", "release", "--rm-dist", , "--snapshot"]
+    - ["goreleaser", "release", "--rm-dist", "--snapshot"]
     mounts:
     - ".:/app"
     envs:
