remove release tasks and add go tasks for simple go project with dependencies

--- a/recipes/golang/.dunner.yaml
+++ b/recipes/golang/.dunner.yaml
@@ -1,84 +1,34 @@
 build:
   - image: golang
     commands:
-    - ["curl", "-O", "https://raw.githubusercontent.com/golang/dep/master/install.sh"]
-    - ["sh", "install.sh"]
-    - ["./dep", "ensure", "-v"]
-    - ["go", "build", "./..."]
+    - ["go", "build", "-o", "<project_name>"]
     envs:
-    - GOPATH=/dunner/go
-    - INSTALL_DIRECTORY=/dunner/go/src/github.com/leopardslab/dunner
-    mounts:
-    - ".:/dunner/go/src/github.com/leopardslab/dunner:w"
-    dir: "/go/src/github.com/leopardslab/dunner"
+    - XDG_CACHE_HOME=/tmp/.cache 
 
 lint:
-  - follow: setup
-    image: golangci/golangci-lint
+  - image: golangci/golangci-lint
     commands:
     - ["golangci-lint", "run"]
+    envs:
+    - XDG_CACHE_HOME=/tmp/.cache 
 
 vet: 
-  - follow: setup
-    image: golang
+  - image: golang
     commands:
     - ["go", "vet", "./..."]
+    envs:
+    - XDG_CACHE_HOME=/tmp/.cache 
 
 fmt: 
-  - follow: setup
-    image: golang
+  - image: golang
     commands:
     - ["go", "fmt", "./..."]
-
-setup:
-  - image: golang
-    commands:
-    - ["curl", "-O", "https://raw.githubusercontent.com/golang/dep/master/install.sh"]
-    - ["sh", "install.sh"]
-    - ["./dep", "ensure", "-v"]
     envs:
-    - GOPATH=/dunner/go
-    - INSTALL_DIRECTORY=/dunner/go/src/github.com/leopardslab/dunner
-    mounts:
-    - ".:/dunner/go/src/github.com/leopardslab/dunner:w"
-    dir: "/go/src/github.com/leopardslab/dunner"
+    - XDG_CACHE_HOME=/tmp/.cache 
 
 test:
-  - follow: setup
-    image: golang
+  - image: golang
     commands:
     - ["go", "test", "./..."]
-
-init-release:
-  - image: golang
-    commands:
-    - ["apt-get", "update"]
-    - ["apt-get", "install", "-y", "curl", "git", "rpm"]
-    - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
-    - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
-    - ["rm", "-f", "goreleaser.tgz"]
-    - ["goreleaser", "init"]
-
-generate-artifacts:
-  - image: golang
-    commands:
-    - ["apt-get", "update"]
-    - ["apt-get", "install", "-y", "curl", "git", "rpm"]
-    - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
-    - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
-    - ["rm", "-f", "goreleaser.tgz"]
-    - ["goreleaser", "release", "--snapshot", "--skip-publish", "--rm-dist"]
-
-github_release:
-  - image: golang
-    commands:
-    - ["apt-get", "update"]
-    - ["apt-get", "install", "-y", "curl", "git", "rpm"]
-    - ["curl", "-Lo", "goreleaser.tgz", "https://github.com/goreleaser/goreleaser/releases/download/v0.112.2/goreleaser_Linux_x86_64.tar.gz"]
-    - ["tar", "-zxvf", "goreleaser.tgz", "-C", "/usr/local/bin/"]
-    - ["rm", "-f", "goreleaser.tgz"]
-    - ["goreleaser", "release", "--rm-dist", "--snapshot"]
-    mounts:
-    - ".:/app"
     envs:
-    - GITHUB_TOKEN=`$GITHUB_TOKEN`
+    - XDG_CACHE_HOME=/tmp/.cache 
